--- a/README.rdoc
+++ b/README.rdoc
@@ -5,15 +5,10 @@ on the fly to match the elements and attributes of the XML.
 
 Source available at http://github.com/njpearman/Peachy
 
-== Install
+=== Install
 There is no gem available for Peachy yet.  This is the next bit of work to
 complete. In the meantime, if you wish to mess around with Peachy, download and
 include the source files in /lib within your project.
-
-== XML parsing
-
-Currently, Peachy is hard wired to use Nokogiri for XML parsing, but this will
-be abstracted out at some point.
 
 == Usage
 The Peachy::Proxy is the key class in Peachy.  Create a new instance of a
@@ -33,10 +28,15 @@ node name:
 
 Peachy expects method names to be called in the Ruby convention of lowercase with
 underscores.  It will do it's best to match method names to elements and attributes
-following different conventions (currently, this is only CamelCaseNames or 
+following different conventions (currently, this is only CamelCaseNames or
 hyphen-separated-names)
 
 More detailed usage examples can be found in the .rb files in the /test directory.
+
+=== XML parsing
+
+Currently, Peachy is hard wired to use Nokogiri for XML parsing, but this will
+be abstracted out at some point.
 
 === Elements and Attributes
 
