--- a/README.rdoc
+++ b/README.rdoc
@@ -28,8 +28,8 @@ node name:
 
 Peachy expects method names to be called in the Ruby convention of lowercase with
 underscores.  It will do it's best to match method names to elements and attributes
-following different conventions (currently, this is only CamelCaseNames or
-hyphen-separated-names)
+following different conventions (currently, this is camelCaseNames, PascalCaseNames
+or hyphen-separated-names)
 
 More detailed usage examples can be found in the .rb files in the /test directory.
 
