--- a/History.txt
+++ b/History.txt
@@ -2,6 +2,7 @@
 * Minor improvements
   * Better support for Ruby 1.8.6
   * Better implementation of MorphIntoArray, which introduced the Mimic module.
+  * Standardised to_s implementations to return the encapsulated XML from Proxies.
 
 == 0.3.1
 * Minor improvements
