--- a/History.txt
+++ b/History.txt
@@ -1,4 +1,14 @@
+== 0.3.5
+
+* Improved compatibility for Ruby 1.9
+  * Method names are treated as symbols rather than strings
+
+== 0.3.4
+
+* Minor refactorings.
+
 == 0.3.3
+
 * Minor improvements
   * Added some more documentation to methods.
   * Removed whiny-ness from specs.
@@ -6,12 +16,14 @@
   * Added some guard clauses on specs that are impacted when Nokogiri is not installed.
 
 == 0.3.2
+
 * Minor improvements
   * Better support for Ruby 1.8.6
   * Better implementation of MorphIntoArray, which introduced the Mimic module.
   * Standardised to_s implementations to return the encapsulated XML from Proxies.
 
 == 0.3.1
+
 * Minor improvements
   * Should now work on 1.8.6, so removed minimum rqeuirement of Ruby version 1.8.7
   * Tweaked some implementation details.
