--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.4.1
+
+* Added period-separated element / attribute names to the names that can be interpretted. 
+
 == 0.4.0
 
 * Nokogiri strips out XML namespaces when creating new proxies.
